# palindronum

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  NOTICE  README.md  Taskfile.yml  rustfmt.toml
benches/: palindromes.rs
src/: lib.rs  palindromes.rs
tests/: palindromes.rs
